# LemIPC-EPI-2017-2018

./: CMakeLists.txt  Makefile  initipc.c  ipcleaner.sh  ipctester  ipctester.py  lemipc.c  main.c
include/: color.h  lemipc.h
render/graphical/: render.c
render/text/: render.c
src/: core.c  initipc.c  lemipc.c  main.c  utility.c
src/commander/: commander.c  commander_functions.c  snail_research.c
src/game/: determine_winner.c  time_handler.c  winner_functions.c
src/messages/: handle.c  my_str_to_wordtab.c
src/player/: commander_relieving.c  player.c  player_move.c  utility.c
src/render/color/: color_generator.c  handle_color_list.c
src/render/graphical/: graph_functions.c  print_map.c  put_targets.c  render.c
src/render/text/: render.c
tests/: Makefile  tests_parse_args.c
